packages/toolkit/components/summary-list/_summary-list.scss
/* ==========================================================================
   COMPONENTS/ #SUMMARY-LIST
   ========================================================================== */

/**
 * Original code taken from GDS (Government Digital Service)
 * https://github.com/alphagov/govuk-frontend
 *
 * 1. Required to allow us to wrap words that overflow.
 * 2. Reset default user agent styles.
 * 3. Automatic wrapping for unbreakable text (e.g. URLs).
 * 4. Fallback for older browsers only.
 */

.ofh-summary-list {
  @include ofh-font($size: 'paragraph-md');

  margin: 0; /* [2] */

  @include ofh-responsive-margin(32, 'bottom');
}

.ofh-summary-list__row {
  border-bottom: 1px solid $ofh-color-border-primary;
  margin: 0; /* [2] */
  padding-block: $ofh-size-16;

  @include mq($from: tablet) {
    display: grid;
    gap: $ofh-size-24;
    grid-template-columns: minmax(0, 1fr) minmax(0, 2fr) minmax(0, 0.75fr);
    padding-block: $ofh-size-16;
  }
}

.ofh-summary-list--compact .ofh-summary-list__row {
  @include mq($from: tablet) {
    padding-block: $ofh-size-8;
  }
}

.ofh-summary-list__key,
.ofh-summary-list__value,
.ofh-summary-list__actions {
  margin: 0; /* [2] */
  overflow-wrap: break-word;
  vertical-align: top;
  word-wrap: break-word; /* [4] */

  @include mq($from: tablet) {
    min-width: 0;
  }
}

.ofh-summary-list__key {
  @include ofh-typography-weight-bold;

  margin-bottom: $ofh-size-4;

  @include mq($from: tablet) {
    margin-bottom: 0;
  }
}

.ofh-summary-list__value {
  @include mq($from: tablet) {
    margin-bottom: 0;
  }
}

.ofh-summary-list__value > p {
  margin-bottom: $ofh-size-8;
}

.ofh-summary-list__value > :last-child {
  margin-bottom: 0;
}

.ofh-summary-list__actions {
  margin-top: $ofh-size-4;

  @include mq($from: tablet) {
    margin-top: 0;
    text-align: right;
  }
}

.ofh-summary-list__actions a {
  display: inline-block;
}

.ofh-summary-list__actions-list {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 0 $ofh-size-8;
  list-style: none;
  margin: 0; /* [2] */
  padding: 0; /* [2] */
}

.ofh-summary-list__actions-list-item {
  display: inline-flex;
}

.ofh-summary-list__actions-list-item:not(:last-child) {
  border-right: 1px solid $ofh-color-border-primary;
  padding-right: $ofh-size-8;
}

.ofh-summary-list--no-border {
  .ofh-summary-list__row {
    border-bottom: 0;
  }
}

